<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".ExtendedMenu">

    <include layout="@layout/field"/>

    <include
        layout="@layout/portrait_main_button"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-107dp" />

    <Button
        android:id="@+id/pow"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doPow"
        android:text="@string/pow"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/sin"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doSin"
        android:text="@string/sin"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/cos"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doCos"
        android:text="@string/cos"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/tan"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doTan"
        android:text="@string/tan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/inverse_fraction"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doHyperbola"
        android:text="@string/hyperbola"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/factorial"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doFactorial"
        android:text="@string/factorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pow"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/sqrt"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doSqrt"
        android:text="@string/sqrt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/factorial"
        app:layout_constraintTop_toBottomOf="@+id/sin"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/log"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doLog"
        android:text="@string/log"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sqrt"
        app:layout_constraintTop_toBottomOf="@+id/cos"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/pi"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doRad"
        android:text="@string/rad"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/log"
        app:layout_constraintTop_toBottomOf="@+id/tan"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/exp"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="doExp"
        android:text="@string/exp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pi"
        app:layout_constraintTop_toBottomOf="@+id/inverse_fraction"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>